<resources>
    <string name="app_name">Brooke\'s Books</string>
    <string name="insert_dummy_data">insert dummy data</string>
    <string name="delete_all_entries">delete all entries</string>
    <string name="sample_isbn">9780307455161</string>
    <string name="sample_book_name">Sag Harbor</string>
    <string name="sample_supplier">Apex</string>
    <string name="sample_phone">404-373-5555</string>
    <string name="isbn">ISBN</string>
    <string name="price">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="book_name">Book Title</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_book_title">Add a Book</string>
    <string name="edit_book_title">Edit Book</string>
    <string name="error_saving_book">Error with saving book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity</string>
    <string name="sale">Sale</string>
    <string name="plus">+</string>
    <string name="quantity_edit_test">Quantity</string>
    <string name="minus">-</string>
    <string name="call_supplier_button">Call Supplier</string>
    <string name="price_label">Price $</string>
    <string name="supplier_phone">Supplier Phone #</string>
    <string name="missing_or_incorrect_input">Please correct missing or invalid inputs.</string>
    <string name="book_saved_succesfully">Book saved successfully:</string>
    <string name="update_book_failed">Update to book failed</string>
    <string name="book_updated_success">Book updated successfully.</string>
    <string name="let_s_add_some_books">let\'s add some books.</string>
    <string name="no_books">There are no books to sell</string>
    <string name="quit_editing">Discard your changes and quit editing?</string>
    <string name="discard_changes">Discard changes</string>
    <string name="continue_editing">Continue editing</string>
    <string name="something_is_missing">Something is missing</string>
</resources>
